@@ -2,6 +2,7 @@
 
 S3method(heatmaply,default)
 S3method(heatmaply,heatmapr)
+export(ggheatmap)
 export(heatmaply)
 export(heatmapr)
 export(is.heatmapr)
