@@ -3,6 +3,7 @@ heatmaply 0.5.0 (2016-08-04)
 
 ### NEW FEATURES
 * is.heatmapr
+* ggheatmap - first try. (not working well enough yet. The proportions of the elements are not good)
 
 
 
